--- a/app/src/main/res/layout/starting_fragment.xml
+++ b/app/src/main/res/layout/starting_fragment.xml
@@ -5,4 +5,9 @@
     android:layout_height="match_parent"
     tools:context=".ui.fragment.starting.StartingFragment">
 
+    <ProgressBar
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center" />
+
 </FrameLayout>
