--- a/app/src/main/res/layout/auth_fragment.xml
+++ b/app/src/main/res/layout/auth_fragment.xml
@@ -10,8 +10,8 @@
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/horizontalCenterGuideline"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:orientation="horizontal"
         app:layout_constraintGuide_percent="0.5" />
 
