Bind data from view model to auth fragment

--- a/app/src/main/res/layout/fragment_auth.xml
+++ b/app/src/main/res/layout/fragment_auth.xml
@@ -33,6 +33,7 @@
             android:hint="@string/email_hint"
             android:importantForAutofill="no"
             android:inputType="textEmailAddress"
+            android:text="@={viewModel.eMailLiveData}"
             app:layout_constraintBottom_toTopOf="@id/passwordTextView"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
@@ -44,6 +45,7 @@
             android:hint="@string/password_hint"
             android:importantForAutofill="no"
             android:inputType="textVisiblePassword"
+            android:text="@={viewModel.passWordLiveData}"
             app:layout_constraintBottom_toTopOf="@id/horizontalCenterGuideline"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
@@ -52,6 +54,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/margin_normal"
+            android:onClick="@{() -> viewModel.signInButtonClicked()}"
             android:text="@string/sign_in_button_caption"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
