Improved auth fragment layout UX

--- a/app/src/main/res/layout/fragment_auth.xml
+++ b/app/src/main/res/layout/fragment_auth.xml
@@ -18,13 +18,6 @@
         android:paddingEnd="@dimen/margin_large"
         tools:context=".ui.fragment.auth.AuthFragment">
 
-        <androidx.constraintlayout.widget.Guideline
-            android:id="@+id/horizontalCenterGuideline"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:orientation="horizontal"
-            app:layout_constraintGuide_percent="0.5" />
-
         <EditText
             android:id="@+id/emailTextView"
             android:layout_width="0dp"
@@ -33,8 +26,9 @@
             android:hint="@string/email_hint"
             android:importantForAutofill="no"
             android:inputType="textEmailAddress"
+            android:layout_marginTop="@dimen/margin_large"
             android:text="@={viewModel.eMailLiveData}"
-            app:layout_constraintBottom_toTopOf="@id/passwordTextView"
+            app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
 
@@ -45,8 +39,9 @@
             android:hint="@string/password_hint"
             android:importantForAutofill="no"
             android:inputType="textVisiblePassword"
+            android:layout_marginTop="@dimen/margin_normal"
             android:text="@={viewModel.passWordLiveData}"
-            app:layout_constraintBottom_toTopOf="@id/horizontalCenterGuideline"
+            app:layout_constraintTop_toBottomOf="@id/emailTextView"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
 
